--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^17.0.0",
-    "@angular/core": "^17.0.0"
+    "@angular/core": "^17.0.0",
+    "@angular/router": "~17.0.0",
+    "@angular/forms": "~17.0.0",
+    "rxjs": "~7.8.0",
+    "@supabase/supabase-js": "^2.39.1"
   },
-  "dependencies": {
-    "tslib": "^2.3.0"
-  },
+  "dependencies": {},
   "sideEffects": false
 }
