chore: updates versions

--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ng-supabase/core",
-  "version": "0.0.1",
+  "version": "1.0.0-rc.1",
   "peerDependencies": {
     "@angular/common": "^17.0.0",
     "@angular/core": "^17.0.0",
