--- a/libs/bootstrap/package.json
+++ b/libs/bootstrap/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ng-supabase/bootstrap",
-  "version": "0.0.1",
+  "version": "1.0.0-rc.1",
   "peerDependencies": {
     "@angular/core": "^17.0.0",
     "@ng-supabase/core": "*"
