--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ng-supabase/source",
-  "version": "1.0.0-rc.1",
+  "version": "0.0.0",
   "license": "MIT",
   "scripts": {
     "nx": "nx",
