--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -36,8 +36,38 @@ jobs:
       - name: Print environment info
         run: npm run nx -- report
 
-      - name: Publish packages
-        run: npm run nx -- release publish
+      # Switch back to using NX once this bug is fixed:
+      # https://github.com/nrwl/nx/issues/21855 - @russell.green
+      # 
+      # - name: Publish packages
+      #   run: npm run nx -- release publish
+      #   env:
+      #     NODE_AUTH_TOKEN: ${{ secrets.NPM_ACCESS_TOKEN }}
+      #     NPM_CONFIG_PROVENANCE: true
+
+      # TODO: Remove these steps once the above step is able to
+      # be added back in - @russell.green
+
+      - name: Publish "core" package
+        run: cd dist/libs/core && npm publish --access public
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_ACCESS_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+          NPM_CONFIG_PROVENANCE: true
+
+      - name: Publish "bootstrap" package
+        run: cd dist/libs/bootstrap && npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+          NPM_CONFIG_PROVENANCE: true
+
+      - name: Publish "material" package
+        run: cd dist/libs/material && npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+          NPM_CONFIG_PROVENANCE: true
+
+      - name: Publish "primeng" package
+        run: cd dist/libs/primeng && npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
           NPM_CONFIG_PROVENANCE: true
