--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -13,6 +13,9 @@ jobs:
       contents: read
       id-token: write 
     timeout-minutes: 10
+    env:
+      NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+      NPM_CONFIG_PROVENANCE: true
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -51,29 +54,26 @@ jobs:
       - name: Build libraries
         run: npm run build:ci
 
-      - name: Cat
-        run: cat .npmrc
+      - name: Create NPM registry creds for "core" package
+        run: echo $'@ng-supabase:registry = "https://registry.npmjs.org/"\r//registry.npmjs.org/:_authToken=${{ secrets.NODE_AUTH_TOKEN  }}' > dist/libs/core/.npmrc
 
       - name: Publish "core" package
         run: cp .npmrc dist/libs/core && cd dist/libs/core && npm publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
-          NPM_CONFIG_PROVENANCE: true
+
+      - name: Create NPM registry creds for "bootstrap" package
+        run: echo $'@ng-supabase:registry = "https://registry.npmjs.org/"\r//registry.npmjs.org/:_authToken=${{ secrets.NODE_AUTH_TOKEN  }}' > dist/libs/bootstrap/.npmrc
 
       - name: Publish "bootstrap" package
         run: cp .npmrc dist/libs/bootstrap && cd dist/libs/bootstrap && npm publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
-          NPM_CONFIG_PROVENANCE: true
+
+      - name: Create NPM registry creds for "material" package
+        run: echo $'@ng-supabase:registry = "https://registry.npmjs.org/"\r//registry.npmjs.org/:_authToken=${{ secrets.NODE_AUTH_TOKEN  }}' > dist/libs/material/.npmrc
 
       - name: Publish "material" package
         run: cp .npmrc dist/libs/material && cd dist/libs/material && npm publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
-          NPM_CONFIG_PROVENANCE: true
+
+      - name: Create NPM registry creds for "primeng" package
+        run: echo $'@ng-supabase:registry = "https://registry.npmjs.org/"\r//registry.npmjs.org/:_authToken=${{ secrets.NODE_AUTH_TOKEN  }}' > dist/libs/primeng/.npmrc
 
       - name: Publish "primeng" package
         run: cp .npmrc dist/libs/primeng && cd dist/libs/primeng && npm publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
-          NPM_CONFIG_PROVENANCE: true
