--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -27,12 +27,12 @@
   },
   "homepage": "https://github.com/rustygreen/ng-supabase#readme",
   "peerDependencies": {
-    "@angular/common": "^17.0.0",
-    "@angular/core": "^17.0.0",
-    "@angular/router": "~17.0.0",
-    "@angular/forms": "~17.0.0",
-    "rxjs": "~7.8.0",
-    "@supabase/supabase-js": "^2.39.1"
+    "@angular/common": ">=17.0.0",
+    "@angular/core": ">=17.0.0",
+    "@angular/router": ">=17.0.0",
+    "@angular/forms": ">=17.0.0",
+    "rxjs": ">=7.8.0",
+    "@supabase/supabase-js": ">=2.39.1"
   },
   "dependencies": {},
   "sideEffects": false
