--- a/libs/primeng/package.json
+++ b/libs/primeng/package.json
@@ -27,14 +27,14 @@
   },
   "homepage": "https://github.com/rustygreen/ng-supabase#readme",
   "peerDependencies": {
-    "@angular/common": "^17.0.0",
-    "@angular/core": "^17.0.0",
-    "primeng": "^17.3.0",
-    "primeflex": "^3.3.1",
-    "@angular/forms": "~17.0.0",
-    "rxjs": "~7.8.0",
+    "@angular/common": ">=17.0.0",
+    "@angular/core": ">=17.0.0",
+    "primeng": ">=17.3.0",
+    "primeflex": ">=3.3.1",
+    "@angular/forms": ">=17.0.0",
+    "rxjs": ">=7.8.0",
     "@ng-supabase/core": "*",
-    "@supabase/supabase-js": "^2.39.1"
+    "@supabase/supabase-js": ">=2.39.1"
   },
   "dependencies": {},
   "sideEffects": false
