--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "ng": "nx",
     "build": "nx build",
     "build:demo": "nx build demo --configuration=production",
-    "build:ci": "nx run-many -t build --parallel=5 --configuration=production",
+    "build:ci": "nx run-many -t build --parallel=5 --configuration=production && npm run script -- scripts/update-lib-packages.ts",
     "start": "nx serve",
     "serve": "nx serve",
+    "script": "ts-node -r tsconfig-paths/register --project scripts/tsconfig.json",
     "stylelint": "stylelint",
     "start:demo": "nx serve --project=demo",
     "lint:ci": "npm run lint:all",
@@ -23,23 +24,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~17.0.0",
-    "@angular/common": "~17.0.0",
-    "@angular/compiler": "~17.0.0",
-    "@angular/core": "~17.0.0",
-    "@angular/forms": "~17.0.0",
-    "@angular/platform-browser": "~17.0.0",
-    "@angular/platform-browser-dynamic": "~17.0.0",
-    "@angular/platform-server": "~17.0.0",
-    "@angular/router": "~17.0.0",
-    "@angular/ssr": "~17.0.0",
-    "@nx/angular": "17.2.8",
+    "@angular/animations": ">=17.0.0",
+    "@angular/common": ">=17.0.0",
+    "@angular/compiler": ">=17.0.0",
+    "@angular/core": ">=17.0.0",
+    "@angular/forms": ">=17.0.0",
+    "@angular/platform-browser": ">=17.0.0",
+    "@angular/platform-browser-dynamic": ">=17.0.0",
+    "@angular/platform-server": ">=17.0.0",
+    "@angular/router": ">=17.0.0",
+    "@angular/ssr": ">=17.0.0",
+    "@nx/angular": "^17.2.8",
     "@supabase/supabase-js": "^2.39.1",
     "express": "~4.18.2",
-    "primeflex": "^3.3.1",
-    "primeicons": "^6.0.1",
-    "primeng": "^17.3.0",
-    "rxjs": "~7.8.0",
+    "primeflex": ">=3.3.1",
+    "primeicons": ">=6.0.1",
+    "primeng": ">=17.3.0",
+    "rxjs": ">=7.8.0",
     "stylelint": "^16.2.1",
     "stylelint-config-standard-scss": "^13.0.0",
     "stylelint-order": "^6.0.4",
@@ -72,6 +73,7 @@
     "@typescript-eslint/parser": "^6.9.1",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
+    "glob": "^10.3.10",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "~13.1.4",
