--- a/libs/primeng/package.json
+++ b/libs/primeng/package.json
@@ -29,6 +29,7 @@
   "peerDependencies": {
     "@angular/common": ">=17.0.0",
     "@angular/core": ">=17.0.0",
+    "@angular/router": ">=17.0.0",
     "primeng": ">=17.3.0",
     "primeflex": ">=3.3.1",
     "@angular/forms": ">=17.0.0",
