--- a/libs/primeng/package.json
+++ b/libs/primeng/package.json
@@ -27,12 +27,12 @@
   },
   "homepage": "https://github.com/rustygreen/ng-supabase#readme",
   "peerDependencies": {
-    "@angular/common": ">=17.0.0",
-    "@angular/core": ">=17.0.0",
-    "@angular/router": ">=17.0.0",
-    "primeng": ">=17.3.0",
+    "@angular/common": ">=18.0.0",
+    "@angular/core": ">=18.0.0",
+    "@angular/forms": ">=18.0.0",
+    "primeng": ">=17.8.6",
+    "primeicons": ">=7.0.0",
     "primeflex": ">=3.3.1",
-    "@angular/forms": ">=17.0.0",
     "rxjs": ">=7.8.0",
     "@ng-supabase/core": "*",
     "@supabase/supabase-js": ">=2.39.1"
