--- a/package.json
+++ b/package.json
@@ -21,73 +21,76 @@
     "test": "nx test",
     "test:ci": "npm run test:all --codeCoverage",
     "test:all": "nx run-many -t test",
-    "test:affected": "nx affected -t lint --base=main --head=HEAD --parallel=5 && stylelint -- **/*.scss --fix"
+    "test:affected": "nx affected -t lint --base=main --head=HEAD --parallel=5 && stylelint -- **/*.scss --fix",
+    "update": "nx migrate latest && nx migrate --run-migrations"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": ">=17.0.0",
-    "@angular/common": ">=17.0.0",
-    "@angular/compiler": ">=17.0.0",
-    "@angular/core": ">=17.0.0",
-    "@angular/forms": ">=17.0.0",
-    "@angular/platform-browser": ">=17.0.0",
-    "@angular/platform-browser-dynamic": ">=17.0.0",
-    "@angular/platform-server": ">=17.0.0",
-    "@angular/router": ">=17.0.0",
-    "@angular/ssr": ">=17.0.0",
-    "@nx/angular": "^17.2.8",
-    "@supabase/supabase-js": "^2.39.1",
+    "@angular/animations": "18.2.6",
+    "@angular/common": "18.2.6",
+    "@angular/compiler": "18.2.6",
+    "@angular/core": "18.2.6",
+    "@angular/forms": "18.2.6",
+    "@angular/platform-browser": "18.2.6",
+    "@angular/platform-browser-dynamic": "18.2.6",
+    "@angular/platform-server": "18.2.6",
+    "@angular/router": "18.2.6",
+    "@angular/ssr": "18.2.6",
+    "@nx/angular": "19.8.1",
+    "@supabase/supabase-js": "^2.45.4",
     "express": "~4.18.2",
-    "primeflex": ">=3.3.1",
-    "primeicons": ">=6.0.1",
-    "primeng": ">=17.3.0",
+    "primeicons": ">=7.0.0",
+    "primeng": ">=18.0.0-beta.2",
     "rxjs": ">=7.8.0",
     "stylelint": "^16.2.1",
     "stylelint-config-standard-scss": "^13.0.0",
     "stylelint-order": "^6.0.4",
     "stylelint-scss": "^6.1.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.0"
+    "zone.js": "~0.14.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~17.0.0",
-    "@angular-devkit/core": "~17.0.0",
-    "@angular-devkit/schematics": "~17.0.0",
-    "@angular-eslint/eslint-plugin": "~17.0.0",
-    "@angular-eslint/eslint-plugin-template": "~17.0.0",
-    "@angular-eslint/template-parser": "~17.0.0",
-    "@angular/cli": "~17.0.0",
-    "@angular/compiler-cli": "~17.0.0",
-    "@angular/language-service": "~17.0.0",
-    "@nx/eslint": "17.2.8",
-    "@nx/eslint-plugin": "17.2.8",
-    "@nx/jest": "17.2.8",
-    "@nx/js": "17.2.8",
-    "@nx/workspace": "17.2.8",
-    "@schematics/angular": "~17.0.0",
-    "@swc-node/register": "~1.6.7",
-    "@swc/core": "~1.3.85",
+    "@angular-devkit/build-angular": "18.2.6",
+    "@angular-devkit/core": "18.2.6",
+    "@angular-devkit/schematics": "18.2.6",
+    "@angular-eslint/eslint-plugin": "18.3.1",
+    "@angular-eslint/eslint-plugin-template": "18.3.1",
+    "@angular-eslint/template-parser": "18.3.1",
+    "@angular/cli": "~18.2.0",
+    "@angular/compiler-cli": "18.2.6",
+    "@angular/language-service": "18.2.6",
+    "@nx/eslint": "19.8.1",
+    "@nx/eslint-plugin": "19.8.1",
+    "@nx/jest": "19.8.1",
+    "@nx/js": "19.8.1",
+    "@nx/workspace": "19.8.1",
+    "@schematics/angular": "18.2.6",
+    "@swc-node/register": "1.9.2",
+    "@swc/core": "1.5.7",
     "@types/express": "4.17.14",
-    "@types/jest": "^29.4.0",
-    "@types/node": "18.16.9",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
-    "eslint": "~8.48.0",
+    "@types/jest": "29.5.13",
+    "@types/node": "^18.16.9",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
+    "@typescript-eslint/utils": "^7.16.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "8.57.1",
     "eslint-config-prettier": "^9.0.0",
     "glob": "^10.3.10",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
-    "jest-preset-angular": "~13.1.4",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "jest-preset-angular": "14.1.1",
     "jsonc-eslint-parser": "^2.1.0",
-    "ng-packagr": "~17.0.0",
-    "nx": "17.2.8",
-    "postcss": "^8.4.5",
+    "ng-packagr": "18.2.1",
+    "nx": "19.8.1",
+    "postcss": "^8.4.47",
     "postcss-import": "~14.1.0",
     "postcss-preset-env": "~7.5.0",
     "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.4.13",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.2.2"
+    "typescript": "5.5.4"
   }
 }
