chore: updates for primeng 18 upgrade

--- a/libs/primeng/.eslintrc.json
+++ b/libs/primeng/.eslintrc.json
@@ -39,7 +39,7 @@
         "@nx/dependency-checks": [
           "error",
           {
-            "ignoredDependencies": ["primeflex", "primeicons"]
+            "ignoredDependencies": ["primeicons"]
           }
         ]
       }
