--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -29,6 +29,7 @@
   "peerDependencies": {
     "@angular/common": ">=18.0.0",
     "@angular/core": ">=18.0.0",
+    "@angular/forms": ">=18.0.0",
     "@angular/router": ">=18.0.0",
     "rxjs": ">=7.8.0",
     "@supabase/supabase-js": ">=2.39.1"
