--- a/libs/primeng/package.json
+++ b/libs/primeng/package.json
@@ -30,6 +30,7 @@
     "@angular/common": ">=18.0.0",
     "@angular/core": ">=18.0.0",
     "@angular/forms": ">=18.0.0",
+    "@angular/router": ">=18.0.0",
     "primeng": ">=18.0.0-beta.2",
     "primeicons": ">=7.0.0",
     "rxjs": ">=7.8.0",
