--- a/libs/primeng/package.json
+++ b/libs/primeng/package.json
@@ -31,9 +31,8 @@
     "@angular/core": ">=18.0.0",
     "@angular/forms": ">=18.0.0",
     "@angular/router": ">=18.0.0",
-    "primeng": ">=18.0.0-beta.2",
+    "primeng": ">=18.0.0",
     "primeicons": ">=7.0.0",
-    "rxjs": ">=7.8.0",
     "@ng-supabase/core": "*",
     "@supabase/supabase-js": ">=2.45.0"
   },
