--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "nx build",
     "build:demo": "nx build demo --configuration=production",
     "build:ci": "nx run-many -t build --parallel=5 --configuration=production && npm run script -- scripts/update-lib-packages.ts",
-    "ci": "nx run-many -t build lint test --parallel=5 --configuration=production && stylelint",
+    "ci": "nx run-many -t build lint test --parallel=5 --configuration=production && lint:style",
     "start": "nx serve",
     "serve": "nx serve",
     "script": "ts-node -r tsconfig-paths/register --project scripts/tsconfig.json",
@@ -38,10 +38,11 @@
     "@angular/router": "18.2.6",
     "@angular/ssr": "18.2.6",
     "@nx/angular": "19.8.1",
+    "@primeng/themes": "^18.0.0",
     "@supabase/supabase-js": "^2.45.4",
     "express": "~4.18.2",
     "primeicons": ">=7.0.0",
-    "primeng": ">=18.0.0-beta.2",
+    "primeng": "^18.0.0",
     "rxjs": ">=7.8.0",
     "stylelint": "^16.2.1",
     "stylelint-config-standard-scss": "^13.0.0",
